[gd_scene load_steps=102 format=2]

[ext_resource path="res://objects/characters/Xandria.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/xandria.png" type="Texture" id=2]
[ext_resource path="res://objects/characters/XandriaWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/PlayerCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sprites/Vfx_potion_use.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "show"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.97 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.92596, 21.2475 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.92596, 14.4614 )

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.12, 0.21, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 95, 89, 90, 92, 93, 94, 95 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.12003 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw_subweapon"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.119984, 0.209953, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 87, 81, 82, 84, 85, 86, 87 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "crouch" ],
"method": "change_state"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.28
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108 ]
}

[sub_resource type="Animation" id=7]
length = 0.16
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.09, 0.12, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 40, 41, 42 ]
}

[sub_resource type="Animation" id=8]
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.25, 0.45, 0.65, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 108 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "emit_blood"
}, {
"args": [ true ],
"method": "emit_blood"
}, {
"args": [ true ],
"method": "emit_blood"
}, {
"args": [ true ],
"method": "emit_blood"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.65098, 0.192157, 0.192157, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 105, 106, 107, 108 ]
}

[sub_resource type="Animation" id=12]
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}

[sub_resource type="Animation" id=14]
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.16, 0.18, 0.2, 0.22, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48, 49, 50, 51, 52, 53, 54, 56 ]
}

[sub_resource type="Animation" id=15]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 30, 31 ]
}

[sub_resource type="Animation" id=16]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58 ]
}

[sub_resource type="Animation" id=17]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=18]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 67, 68, 69, 70 ]
}

[sub_resource type="Animation" id=19]
length = 0.43
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.11, 0.15, 0.19, 0.24, 0.3, 0.37 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=20]
length = 0.7
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=21]
length = 0.48
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.13, 0.21, 0.27, 0.36, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79 ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "attack-crouch"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "backdash"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "changedir"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "crouch"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "jump2"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "pos-backdash"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "pos-jump"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "pos-run"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "pos-slide"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "pre-run"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "run"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "slide"

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2
auto_advance = true
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true
disabled = true

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
priority = 4

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=52]
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
advance_condition = "state == \"run\""

[sub_resource type="AnimationNodeStateMachineTransition" id=54]
advance_condition = "state == \"fall\""
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=55]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=56]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachineTransition" id=64]
priority = 0

[sub_resource type="AnimationNodeStateMachineTransition" id=65]
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=66]

[sub_resource type="AnimationNodeStateMachineTransition" id=67]
priority = 4

[sub_resource type="AnimationNodeStateMachineTransition" id=68]
priority = 10

[sub_resource type="AnimationNodeStateMachineTransition" id=69]

[sub_resource type="AnimationNodeStateMachineTransition" id=70]

[sub_resource type="AnimationNodeStateMachineTransition" id=71]
priority = 5

[sub_resource type="AnimationNodeStateMachineTransition" id=72]
switch_mode = 2
auto_advance = true
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=73]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=74]

[sub_resource type="AnimationNodeStateMachineTransition" id=75]

[sub_resource type="AnimationNodeStateMachineTransition" id=76]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=78]

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=82]
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=83]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
priority = 3

[sub_resource type="AnimationNodeStateMachineTransition" id=85]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]

[sub_resource type="AnimationNodeStateMachineTransition" id=88]

[sub_resource type="AnimationNodeStateMachineTransition" id=89]
priority = 7
disabled = true

[sub_resource type="AnimationNodeStateMachineTransition" id=90]
priority = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=91]

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachine" id=93]
states/attack/node = SubResource( 23 )
states/attack/position = Vector2( -165.424, -866.371 )
states/attack-crouch/node = SubResource( 22 )
states/attack-crouch/position = Vector2( -441.369, -635.873 )
states/backdash/node = SubResource( 24 )
states/backdash/position = Vector2( -523.8, -540.862 )
states/changedir/node = SubResource( 25 )
states/changedir/position = Vector2( 223, -635.873 )
states/crouch/node = SubResource( 26 )
states/crouch/position = Vector2( -160.424, -281.862 )
states/dead/node = SubResource( 27 )
states/dead/position = Vector2( 303.281, -949.904 )
states/fall/node = SubResource( 28 )
states/fall/position = Vector2( -91.424, -504.862 )
states/hurt/node = SubResource( 29 )
states/hurt/position = Vector2( 59, -760.536 )
states/idle/node = SubResource( 30 )
states/idle/position = Vector2( 533, -831.873 )
states/jump/node = SubResource( 31 )
states/jump/position = Vector2( -22, -212.862 )
states/jump2/node = SubResource( 32 )
states/jump2/position = Vector2( -447, -56.862 )
states/pos-backdash/node = SubResource( 33 )
states/pos-backdash/position = Vector2( -22, -555.291 )
states/pos-jump/node = SubResource( 34 )
states/pos-jump/position = Vector2( -543, -404.862 )
states/pos-run/node = SubResource( 35 )
states/pos-run/position = Vector2( 204, -510.862 )
states/pos-slide/node = SubResource( 36 )
states/pos-slide/position = Vector2( -350.424, -777.873 )
states/pre-run/node = SubResource( 37 )
states/pre-run/position = Vector2( 576, -510.862 )
states/run/node = SubResource( 38 )
states/run/position = Vector2( 526, -356.862 )
states/slide/node = SubResource( 39 )
states/slide/position = Vector2( -165.424, -660.873 )
transitions = [ "idle", "pre-run", SubResource( 40 ), "pre-run", "run", SubResource( 41 ), "run", "pos-run", SubResource( 42 ), "changedir", "run", SubResource( 43 ), "pre-run", "changedir", SubResource( 44 ), "fall", "jump2", SubResource( 45 ), "fall", "jump", SubResource( 46 ), "jump", "jump2", SubResource( 47 ), "changedir", "idle", SubResource( 48 ), "pos-run", "idle", SubResource( 49 ), "pre-run", "pos-run", SubResource( 50 ), "pos-run", "pre-run", SubResource( 51 ), "run", "changedir", SubResource( 52 ), "pos-run", "changedir", SubResource( 53 ), "jump", "pos-jump", SubResource( 54 ), "pos-jump", "fall", SubResource( 55 ), "jump2", "pos-jump", SubResource( 56 ), "idle", "jump", SubResource( 57 ), "pos-run", "jump", SubResource( 58 ), "pre-run", "jump", SubResource( 59 ), "run", "jump", SubResource( 60 ), "fall", "run", SubResource( 61 ), "pos-jump", "run", SubResource( 62 ), "changedir", "jump", SubResource( 63 ), "pos-jump", "pos-run", SubResource( 64 ), "pre-run", "crouch", SubResource( 65 ), "crouch", "idle", SubResource( 66 ), "changedir", "crouch", SubResource( 67 ), "fall", "crouch", SubResource( 68 ), "pos-jump", "crouch", SubResource( 69 ), "pos-jump", "jump", SubResource( 70 ), "idle", "backdash", SubResource( 71 ), "backdash", "pos-backdash", SubResource( 72 ), "pos-backdash", "idle", SubResource( 73 ), "pos-backdash", "jump", SubResource( 74 ), "pos-backdash", "crouch", SubResource( 75 ), "crouch", "slide", SubResource( 76 ), "slide", "pos-slide", SubResource( 77 ), "pos-slide", "slide", SubResource( 78 ), "pos-slide", "idle", SubResource( 79 ), "idle", "attack", SubResource( 80 ), "attack", "idle", SubResource( 81 ), "crouch", "attack-crouch", SubResource( 82 ), "attack-crouch", "pos-slide", SubResource( 83 ), "pos-slide", "attack-crouch", SubResource( 84 ), "changedir", "pre-run", SubResource( 85 ), "idle", "hurt", SubResource( 86 ), "hurt", "pos-run", SubResource( 87 ), "idle", "dead", SubResource( 88 ), "pos-backdash", "fall", SubResource( 89 ), "backdash", "crouch", SubResource( 90 ), "backdash", "fall", SubResource( 91 ), "slide", "pos-backdash", SubResource( 92 ) ]
start_node = "idle"
end_node = "dead"
graph_offset = Vector2( -291.765, -804.073 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=94]

[sub_resource type="Animation" id=95]
resource_name = "crouch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionStand:shape:extents")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.92596, 14.8455 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionStand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.023, -14.801 ) ]
}

[sub_resource type="Animation" id=96]
resource_name = "stand"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionStand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.0234375, -21.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionStand:shape:extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4.92596, 21.2475 ) ]
}

[node name="Xandria" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
collision_mask = 46
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ".05 accel"
}

[node name="PlayerCamera" parent="." instance=ExtResource( 4 )]
limit_smoothed = true
target = NodePath("..")

[node name="PotionUse" type="Node2D" parent="."]
position = Vector2( 0.0783129, -24 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PotionUse"]
anims/show = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PotionUse"]
position = Vector2( 0.0783129, 0 )
z_index = 1
texture = ExtResource( 5 )
vframes = 3
hframes = 5
frame = 10

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
vframes = 7
hframes = 16
frame = 1
__meta__ = {
"_editor_description_": "z index : 0"
}

[node name="RayCastRampFront" type="RayCast2D" parent="Sprite"]
position = Vector2( 5.921, 28.943 )
rotation = -1.5708
scale = Vector2( 0.291, 0.616 )
enabled = true
cast_to = Vector2( 0, 5.421 )
collision_mask = 14

[node name="RayCastRampBack" type="RayCast2D" parent="Sprite"]
position = Vector2( -6.033, 28.943 )
rotation = 1.5708
scale = Vector2( 0.291, 0.616 )
enabled = true
cast_to = Vector2( 0, 5.421 )
collision_mask = 14

[node name="RayCastUp" type="RayCast2D" parent="Sprite"]
position = Vector2( 0, 2.585 )
rotation = 3.14159
scale = Vector2( 4.512, 1 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 14

[node name="RayCastDown" type="RayCast2D" parent="Sprite"]
visible = false
position = Vector2( 0, 32.63 )
scale = Vector2( 0.772, 0.304 )
enabled = true
cast_to = Vector2( 0, 40 )
collision_mask = 14

[node name="XandriaWeapon" parent="Sprite" groups=[
"player_main_weapon",
] instance=ExtResource( 3 )]
position = Vector2( 13.0937, 16.0037 )

[node name="EndPositionSubweapon" type="Position2D" parent="Sprite"]
position = Vector2( 63.4036, 32 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[node name="BloodPosition" type="Node2D" parent="Sprite"]
position = Vector2( -0.0256071, 6.11812 )

[node name="Pos1" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( -3.09026, -6.18052 )

[node name="Pos2" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( -0.280931, 0.749153 )

[node name="Pos3" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( 4.0267, -8.24069 )

[node name="Pos4" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( -4.12034, 6.83602 )

[node name="Pos5" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( 4.58857, 7.2106 )

[node name="Pos6" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( -0.083374, -14.3137 )

[node name="Pos7" type="Position2D" parent="Sprite/BloodPosition"]
position = Vector2( 0.10392, 15.0906 )

[node name="CollisionStand" type="CollisionShape2D" parent="."]
self_modulate = Color( 0.560784, 0.980392, 0, 1 )
position = Vector2( -0.0234375, -21.25 )
shape = SubResource( 2 )

[node name="CollisionCrouch" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.023, -14.465 )
shape = SubResource( 3 )
disabled = true

[node name="Tween" type="Tween" parent="."]
__meta__ = {
"_editor_description_": "para darle una animacion de moverse hacia arriba al morir"
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/attack-crouch = SubResource( 5 )
anims/backdash = SubResource( 6 )
anims/changedir = SubResource( 7 )
anims/crouch = SubResource( 8 )
anims/die = SubResource( 9 )
anims/fall = SubResource( 10 )
anims/hurt = SubResource( 11 )
anims/idle = SubResource( 12 )
anims/jump = SubResource( 13 )
anims/jump2 = SubResource( 14 )
anims/pos-backdash = SubResource( 15 )
anims/pos-jump = SubResource( 16 )
anims/pos-run = SubResource( 17 )
anims/pos-slide = SubResource( 18 )
anims/pre-run = SubResource( 19 )
anims/run = SubResource( 20 )
anims/slide = SubResource( 21 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 93 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 94 )
"parameters/conditions/state == \"fall\"" = false
"parameters/conditions/state == \"run\"" = false

[node name="AnimationPlayerCollision" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 95 )
anims/stand = SubResource( 96 )

[node name="TimerBackdash" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TimerSlide" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": ".48"
}

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
__meta__ = {
"_editor_description_": ""
}

[node name="TimerNoHurt" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
__meta__ = {
"_editor_description_": "tiempo en el que el personaje no colisiona con enemigos y peligros"
}
[connection signal="tree_exiting" from="." to="." method="_on_Xandria_tree_exiting"]
[connection signal="timeout" from="TimerBackdash" to="." method="_on_TimerBackdash_timeout"]
[connection signal="timeout" from="TimerSlide" to="." method="_on_TimerSlide_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="TimerNoHurt" to="." method="_on_TimerNoHurt_timeout"]
